--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     }
   },
   "require": {
-    "dumblob/mysql2sqlite": "*"
+    "dumblob/mysql2sqlite": "1.0.0"
   },
   "autoload": {
     "psr-4": {
